--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,10 +3,10 @@
   --foreground: #171717;
 }
 
-html.dark {
+/* html.dark {
   --background: #0a0a0a;
   --foreground: #ededed;
-}
+} */
 
 
 
@@ -24,6 +24,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body::-webkit-scrollbar {
+  display: none; 
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -35,8 +39,8 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
